fix(#10240): align count numbers across targets with and without goals

--- a/webapp/src/css/targets.less
+++ b/webapp/src/css/targets.less
@@ -72,7 +72,9 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: flex-end;
         text-align: center;
+        min-height: 74px;
         .number {
           text-align: center;
           font-size: 48px;
